--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>ANS Networks</title>
+    <title>The Rental Company</title>
 
 </head>
 <body>
