Added new showcase image for events as sample , Added the color in Navigation bar , CSS changes done

--- a/contactus.html
+++ b/contactus.html
@@ -19,12 +19,12 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
   />
-  <title>ANS Networks</title>
+  <title>The Rental Company</title>
 
 </head>
 <body>
      <!--Navigation Bar -->
-     <nav class="navbar navbar-expand-xl bg-dark navbar-dark py-3 fixed-top">
+     <nav class="navbar navbar-expand-xl navbar-dark py-3 fixed-top">
         <div class="container">
           <a href="/test.html" class="navbar-brand">ANS Networks</a>
   
