--- a/test.html
+++ b/test.html
@@ -7,14 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
@@ -25,13 +17,13 @@
 <body>
   <div>
     <!--Navigation Bar -->
-    <nav class="navbar nav-tabs navbar-expand-xl bg-dark navbar-dark py-3 fixed-top">
+    <nav class="navbar nav-tabs navbar-expand-xl navbar-dark py-3 fixed-top">
       <div class="container">
         <div class="anslogoclass">
-          <img src="/images/anslogo.png" class="anslogo">
+          <img src="/images/TheRentalCompany.png" class="anslogo">
         </div>
         <div class="companyname">
-          <a href="#" class="navbar-brand">ANS Networks</a>
+          <a href="#" class="navbar-brand">The Rental Company</a>
         </div>
          <!-- Hamburger button on the right -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -43,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="/aboutus.html" class="nav-link" aria-current="page">About Us</a>
+              <a href="/aboutus.html" class="nav-link --maintext-color" aria-current="page">About Us</a>
             </li>
 
             <!-- Dropdown -->
@@ -123,9 +115,9 @@
       <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
           <div data-aos="fade-up">
-            <H1 class="display-1">Welcome to <span class="text-warning fw-bolder">ANS Networks</span></H1>
+            <H1 class="display-1">Welcome to <span class="fw-bolder">The Rental Company</span></H1>
             <p class="lead my-4">
-              Get excellent computer services like repairs, server installation,Software support and consulting etc.at affordable prices.
+              At The Rental Company, we understand the importance of reliability, convenience, and affordability when it comes to renting our equipment. That's why we have dedicated ourselves to providing an extensive range of well-maintained products that meet the highest industry standards.
             </p>
             <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Get your Quote</button>
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -177,7 +169,7 @@
               </div>
             </div>
           </div>
-          <img class="img-fluid w-50" data-aos="fade-left"  data-aos-offset="300" data-aos-easing="ease-in-sine" src="images/SowcaseImg.jpg" alt="">
+          <img class="img-fluid w-50" data-aos="fade-left"  data-aos-offset="300" data-aos-easing="ease-in-sine" src="images/showcaseimageEvents.jpg" alt="">
           <!--<a href="http://www.freepik.com">Designed by macrovector / Freepik</a> -->
         </div>
       </div>
