--- a/test.html
+++ b/test.html
@@ -175,8 +175,8 @@
       </div>
     </section>
 
-    <!--Let us reach you-->
-    <section class="bg-dark text-light p-5">
+    <!--Let us reach you
+    <section class="showcase bg-secondary text-light p-5">
       <div class="container" data-aos="zoom-in" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <div class="d-md-flex justify-content-between align-items-center">
           <h3 class="mb-3 mb-md-0">Let us reach you !! Simply Enter your email and will connect with you in an hour</h3>
@@ -194,7 +194,16 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
+    
+    <!-- Down arrow-->
+    <Section>
+      <div class="d-flex justify-content-center mb-5 mt-3" >
+        <span class="display-2">
+          <i class="fa-solid fa-angles-down fa-beat fa-xl" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
+        </span>
+      </div>
+    </Section>
 
     <!-- Let us reach you 2 -->
     <section>
@@ -204,6 +213,16 @@
         </h1>
       </div>
     </section>
+
+    <!-- Up arrow-->
+
+    <Section>
+      <div class="d-flex justify-content-center mb-3 mt-5" >
+        <span class="display-2">
+          <i class="fa-solid fa-angles-up fa-beat fa-xl" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
+        </span>
+      </div>
+    </Section>
 
     <!-- Boxes Grid-->
 
@@ -768,8 +787,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
-    <!--Font Awsome scripts-->
     <script src="https://kit.fontawesome.com/5ce8b77eb5.js" crossorigin="anonymous"></script>
+
     <!--
     <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
