--- a/test.html
+++ b/test.html
@@ -113,7 +113,7 @@
     <!--ShowCase-->
     <section class="text-body p-5 p-lg-0 pt-lg-5 text-sm-start mb-3">
       <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
+        <div class="welcome-text d-sm-flex align-items-center justify-content-between">
           <div data-aos="fade-up">
             <H1 class="display-1">Welcome to <span class="fw-bolder">The Rental Company</span></H1>
             <p class="lead my-4">
@@ -208,8 +208,8 @@
     <!-- Let us reach you 2 -->
     <section>
       <div class="container">
-        <h1 class="mt-3 mb-3 mb-md-0 text-center">
-          Operating <span class="text-info display-2">Since 2014</span> , <span class="text-warning display-2">ANS NETWORK SERVICES</span> has built an excellent reputation by <br>continuously delivering their customers;
+        <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
+          Operating <span class="display-4">Since 2023</span> , <span class="display-1 fw-bolder">The Rental Company</span> has built an excellent reputation by <br>continuously delivering their customers;
         </h1>
       </div>
     </section>
