--- a/test.html
+++ b/test.html
@@ -209,7 +209,7 @@
     <section>
       <div class="container">
         <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
-          Operating <span class="display-4">Since 2023</span> , <span class="display-1 fw-bolder">The Rental Company</span> has built an excellent reputation by <br>continuously delivering their customers;
+          Operating <span class="display-4">Since 2023</span> , <span class="display-3 fw-bolder">The Rental Company</span> has built an excellent reputation by <br>continuously delivering their customers;
         </h1>
       </div>
     </section>
@@ -230,53 +230,53 @@
       <div class="container">
         <div class="row text-center g-4">
           <div class="col-md" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <div class="card bg-dark text-light">
+            <div class="card card-body-one text-light">
               <div class="card-body text-center">
                 <div class="h1 mb-3">
                  <!--<i class="bi bi-chevron-double-right"></i>--> 
-                  <i class="fa-solid fa-signal fa-bounce" style="color: #0d6efd; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
+                  <i class="fa-solid fa-signal fa-bounce" style="color: #f0f6fe; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
                 </div>
                 <h3 class="card-title mb-3">
-                  Proper service
+                  Mist Fans
                   </h3>
                 <p class="card-text">
                   We are working consistently with the aim of providing high quality products & proper service.
                 </p>
-                <a href="/servermaintanceservice/servermaintance.html" class="btn btn-outline-primary">Read More</a>
+                <a href="/servermaintanceservice/servermaintance.html" class="btn btn-outline-light">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-md" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <div class="card bg-secondary text-light">
+            <div class="card card-body-two text-light">
               <div class="card-body text-center">
                 <div class="h1 mb-3">
                   <!--<i class="bi bi-arrow-up-circle"></i>-->
-                  <i class="fa-solid fa-brain fa-bounce" style="color: #212529; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
+                  <i class="fa-solid fa-brain fa-bounce" style="color: #f0f6fe; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
                 </div>
                 <h3 class="card-title mb-3">
-                  Detailed knowledge
+                  Big Jumbo Air Cooler
                  </h3>
                 <p class="card-text">
                   We will make sure customer get full knowledge about the service and product.
                 </p>
-                <a href="/IT infrastructuremanagementservices/clodservice.html" class="btn btn-outline-dark">Read More</a>
+                <a href="/IT infrastructuremanagementservices/clodservice.html" class="btn btn-outline-light">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-md" data-aos="fade-up-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <div class="card bg-dark text-light">
+            <div class="card card-body-three text-light">
               <div class="card-body text-center">
                 <div class="h1 mb-3">
                   <!--<i class="bi bi-emoji-smile"></i>-->
-                  <i class="fa-solid fa-headset fa-bounce" style="color: #0d6efd; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
+                  <i class="fa-solid fa-headset fa-bounce" style="color: #f0f6fe; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
                 </div>
                 <h3 class="card-title mb-3">
-                  Customer Support
+                  Pedestal fan
                   </h3>
                 <p class="card-text">
                   we ensure the same level of customer commitment & support to each and every cutomer.
                 </p>
-                <a href="/IT infrastructuremanagementservices/usersupport.html" class="btn btn-outline-primary">Read More</a>
+                <a href="/IT infrastructuremanagementservices/usersupport.html" class="btn btn-outline-light">Read More</a>
               </div>
             </div>
           </div>
