Added new code of images with card and added CSS for the same also copyed exisitng code to boxgridcontent page

--- a/test.html
+++ b/test.html
@@ -111,7 +111,7 @@
     </nav>
 
     <!--ShowCase-->
-    <section class="text-body p-5 p-lg-0 pt-lg-5 text-sm-start mb-3">
+    <section class="text-body p-5 p-lg-0 pt-lg-5 text-sm-start mb-5">
       <div class="container">
         <div class="welcome-text d-sm-flex align-items-center justify-content-between">
           <div data-aos="fade-up">
@@ -217,323 +217,70 @@
     <!-- Up arrow-->
 
     <Section>
-      <div class="d-flex justify-content-center mb-3 mt-5" >
+      <div class="d-flex justify-content-center mb-5 mt-5" >
         <span class="display-2">
           <i class="fa-solid fa-angles-up fa-beat fa-xl" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
         </span>
       </div>
     </Section>
-
-    <!-- Boxes Grid-->
-
-    <section class="p-5">
-      <div class="container">
-        <div class="row text-center g-4">
-          <div class="col-md" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <div class="card card-body-one text-light">
-              <div class="card-body text-center">
-                <div class="h1 mb-3">
-                 <!--<i class="bi bi-chevron-double-right"></i>--> 
-                  <i class="fa-solid fa-signal fa-bounce" style="color: #f0f6fe; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
-                </div>
-                <h3 class="card-title mb-3">
-                  Mist Fans
-                  </h3>
-                <p class="card-text">
-                  We are working consistently with the aim of providing high quality products & proper service.
-                </p>
-                <a href="/servermaintanceservice/servermaintance.html" class="btn btn-outline-light">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <div class="card card-body-two text-light">
-              <div class="card-body text-center">
-                <div class="h1 mb-3">
-                  <!--<i class="bi bi-arrow-up-circle"></i>-->
-                  <i class="fa-solid fa-brain fa-bounce" style="color: #f0f6fe; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
-                </div>
-                <h3 class="card-title mb-3">
-                  Big Jumbo Air Cooler
-                 </h3>
-                <p class="card-text">
-                  We will make sure customer get full knowledge about the service and product.
-                </p>
-                <a href="/IT infrastructuremanagementservices/clodservice.html" class="btn btn-outline-light">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md" data-aos="fade-up-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <div class="card card-body-three text-light">
-              <div class="card-body text-center">
-                <div class="h1 mb-3">
-                  <!--<i class="bi bi-emoji-smile"></i>-->
-                  <i class="fa-solid fa-headset fa-bounce" style="color: #f0f6fe; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;"></i>
-                </div>
-                <h3 class="card-title mb-3">
-                  Pedestal fan
-                  </h3>
-                <p class="card-text">
-                  we ensure the same level of customer commitment & support to each and every cutomer.
-                </p>
-                <a href="/IT infrastructuremanagementservices/usersupport.html" class="btn btn-outline-light">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
+    
+    <!--Image with Cards-->
+    <section class="d-flex justify-content-center">
+    <!--First Image card starts-->
+    <div class="card imagecard mt-5">
+      <div class="imgbox">
+        <img class="card-img"
+          src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
       </div>
-    </section>
 
-    <!-- Learning Sections-->
-    <section id="learn" class="p-5">
-      <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-md" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <img src="images/Why.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-md p-5" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <h2 class="fw-bold">Sales, Repair and maintenance of 
-              Computer / Laptops</h2>
-            <p class="lead fw-bold">
-              Trust us to find you the right equipment to do the job, and we will take care of all the set up and data transfer to make your new computer turn-key.
-            </p>
-            <p>
-              When things stop working, we are right here to assist you. We offer services such as: PC maintenance and tune-ups, Virus and Malware removal, Computer upgrades, Laptop repairs; broken screens, DC jack, etc., Application support for common applications such as Sage Accounting, Quickbooks, Microsoft Office, and others, Data Recovery Services<br>Our on-site computer support service makes getting your computer fixed easy! No need to disconnect all those computer cables.
-
-            </p>
-            <a class="btn btn-primary icon-link icon-link-hover mt-3" href="/managedITservices/desktopandlaptopservice.html">
-              Read More
-              <!--<i class="bi bi-chevron-double-right mb-sm-1" aria-hidden="true"><use xlink:href="#arrow-right"></use></i>-->
-              <i class="fa-solid fa-arrow-right-to-bracket fa-fade" style="color: #fdfdfd;"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--Learning section Part 2-->
-    <section id="learn" class="p-5 bg-dark text-light">
-      <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-md p-5" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <h2 class="fw-bold">Data cabling and wireless communications</h2>
-            <p class="lead fw-bold">
-              ANS Network Services provides a diverse array of small and mid-sized businesses with all their cable and wiring services
-            </p>
-            <p>
-              From project inception through completion, TNSC is a single source for total system and network design, engineering, installation, and support.<br>We provide the best Data cabling and wireless communication solutions in the India, at very effective pricing. Our customers benefit from a wealth of data cabling skills and years of combined network experience. We always deliver our cable solutions with a commitment to do things right, delivered on time, and within budget.
-            </p>
-            <a class="btn btn-outline-primary icon-link icon-link-hover mt-3" href="/networkservices/rackdressing.html">
-              Read More
-              <!--<i class="bi bi-chevron-double-right mb-sm-1" aria-hidden="true"><use xlink:href="#arrow-right"></use></i>-->
-              <i class="fa-solid fa-arrow-right-to-bracket fa-fade" style="color: #fdfdfd;"></i>
-            </a>
-          </div>
-          <div class="col-md" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <img src="images/Whoweare.jpg" class="img-fluid" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--Learning section Part 3-->
-    <section id="learn" class="p-5 text-dark">
-      <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-md" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <img src="images/Whoweare.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-md p-5" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <h2 class="fw-bold">Software support and consulting</h2>
-            <p class="lead fw-bold">
-              Since 2014, in this industry we have been able to build the requisite expertise, processes and quality assurance to provide support to our customers and it goes without saying that our expertise in the use of the internet is unrivalled. And our customer-centric, partnership approach ensures that you are at the centre of what we do. 
-            </p>
-            <p>
-              "The greatest risk for any business is that of losing its customers." <br>ANS Network Services, focus is on the quality of service delivered. This is very closely monitored and measured by our team with particular emphasis on both technical and language correctness.
-            </p>
-            <a class="btn btn-primary icon-link icon-link-hover mt-3" href="/softwaremanagmentservice/ComputerAMCServices.html">
-              Read More
-              <!--<i class="bi bi-chevron-double-right mb-sm-1" aria-hidden="true"><use xlink:href="#arrow-right"></use></i>-->
-              <i class="fa-solid fa-arrow-right-to-bracket fa-fade" style="color: #fdfdfd;"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--Learning section Part 4-->
-    <section id="learn" class="p-5 bg-dark text-light">
-        <div class="container">
-          <div class="row align-items-center justify-content-between">
-            <div class="col-md p-5" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-              <h2 class="fw-bold">CCTV Cameras - installation with Service</h2>
-              <p class="lead fw-bold">
-                Why stake life of our loved ones, provide them with total safety and security in our absence.We provide a total survey of the area and then as per our Expert recommendations provide you different options in Quotations as per the needs.
-              </p>
-              <p>
-                We Provide CCTV surveillance to following areas: Residential Buildings, Government sectors, Offices, Industries, Malls, Religious structures, Commercial Complex, Banks, Schools, Restaurant, Resorts etc. <br> We provide you the best quality and branded CCTV camera and the other accessories with installation and service at best price.
-              </p>
-              <a class="btn btn-outline-primary icon-link icon-link-hover mt-3" href="/networkservices/cctvsecuritysys.html">
-                Read More
-                <!--<i class="bi bi-chevron-double-right mb-sm-1" aria-hidden="true"><use xlink:href="#arrow-right"></use></i>-->
-                <i class="fa-solid fa-arrow-right-to-bracket fa-fade" style="color: #fdfdfd;"></i>
-              </a>
-            </div>
-            <div class="col-md" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-              <img src="images/Whoweare.jpg" class="img-fluid" alt="">
-            </div>
-          </div>
-        </div>
-    </section>
-
-   <!-- Question Accordion -->
-   <section id="questions" class="p-5">
-    <div class="container" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
-      <div class="accordion accordion-flush" id="questions">
-        <!-- Item 1 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-one"
-            >
-              Where exactly are you located?
-            </button>
-          </h2>
-          <div
-            id="question-one"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
-            <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero. Officiis ad
-              velit doloremque at. Dignissimos praesentium necessitatibus
-              natus corrupti cum consequatur aliquam! Minima molestias iure
-              quam distinctio velit.
-            </div>
-          </div>
-        </div>
-        <!-- Item 2 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-two"
-            >
-              How much does it cost to attend?
-            </button>
-          </h2>
-          <div
-            id="question-two"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
-            <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero. Officiis ad
-              velit doloremque at. Dignissimos praesentium necessitatibus
-              natus corrupti cum consequatur aliquam! Minima molestias iure
-              quam distinctio velit.
-            </div>
-          </div>
-        </div>
-        <!-- Item 3 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-three"
-            >
-              What do I need to Know?
-            </button>
-          </h2>
-          <div
-            id="question-three"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
-            <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero. Officiis ad
-              velit doloremque at. Dignissimos praesentium necessitatibus
-              natus corrupti cum consequatur aliquam! Minima molestias iure
-              quam distinctio velit.
-            </div>
-          </div>
-        </div>
-        <!-- Item 4 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-four"
-            >
-              How Do I sign up?
-            </button>
-          </h2>
-          <div
-            id="question-four"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
-            <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero. Officiis ad
-              velit doloremque at. Dignissimos praesentium necessitatibus
-              natus corrupti cum consequatur aliquam! Minima molestias iure
-              quam distinctio velit.
-            </div>
-          </div>
-        </div>
-        <!-- Item 5 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-five"
-            >
-              Do you help me find a job?
-            </button>
-          </h2>
-          <div
-            id="question-five"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
-            <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero. Officiis ad
-              velit doloremque at. Dignissimos praesentium necessitatibus
-              natus corrupti cum consequatur aliquam! Minima molestias iure
-              quam distinctio velit.
-            </div>
-          </div>
-        </div>
+      <div class="image-box-content">
+        <h2>keep Smiling</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+          doloribus vitae fugit enim repudiandae
+        </p>
       </div>
     </div>
-   </section>
+    <!--First Image card ends-->
+
+    <!--Second Image card starts-->
+    <div class="card imagecard mt-5">
+      <div class="imgbox">
+        <img class="card-img"
+          src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
+      </div>
+
+      <div class="image-box-content">
+        <h2>keep Smiling</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+          doloribus vitae fugit enim repudiandae
+        </p>
+      </div>
+    </div>
+    <!--Second Image card ends-->
+
+    <!--Third Image card starts-->
+    <div class="card imagecard mt-5">
+      <div class="imgbox">
+        <img class="card-img"
+          src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
+      </div>
+
+      <div class="image-box-content">
+        <h2>keep Smiling</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+          doloribus vitae fugit enim repudiandae
+        </p>
+      </div>
+    </div>
+    <!--Third Image card ends-->
+    </section>
+
 
     <!-- Grid Wise Content -->
 
