Correction done to Image cards

--- a/test.html
+++ b/test.html
@@ -235,7 +235,7 @@
       </div>
 
       <div class="image-box-content">
-        <h2>keep Smiling</h2>
+        <h2>Keep Smiling</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
           doloribus vitae fugit enim repudiandae
@@ -253,7 +253,7 @@
       </div>
 
       <div class="image-box-content">
-        <h2>keep Smiling</h2>
+        <h2>Keep Smiling</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
           doloribus vitae fugit enim repudiandae
@@ -271,7 +271,7 @@
       </div>
 
       <div class="image-box-content">
-        <h2>keep Smiling</h2>
+        <h2>Keep Smiling</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
           doloribus vitae fugit enim repudiandae
