Added Product Category grid with CSS code

--- a/test.html
+++ b/test.html
@@ -223,7 +223,16 @@
         </span>
       </div>
     </Section>
-    
+
+    <!--Product Catagory Grid-->
+    <section class="product-cat-section mt-5 mb-5">
+      <div class="product-cat-content">
+        <h1>Product Catlogue</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit doloremque minima,</p>
+
+      </div>
+    </section>
+
     <!--Image with Cards-->
     <section class="d-flex justify-content-center">
     <!--First Image card starts-->
@@ -280,7 +289,6 @@
     </div>
     <!--Third Image card ends-->
     </section>
-
 
     <!-- Grid Wise Content -->
 
