--- a/test.html
+++ b/test.html
@@ -290,6 +290,43 @@
     <!--Third Image card ends-->
     </section>
 
+    <!--Images with card second option-->
+    <!--FIrst Image-->
+    <div class="img-card-container">
+      <div class="card__container">
+         <article class="card__article">
+            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
+
+            <div class="card__data">
+               <span class="card__description">Vancouver Mountains, Canada</span>
+               <h2 class="card__title">The Great Path</h2>
+               <a href="#" class="card__button">Read More</a>
+            </div>
+         </article>
+
+          <article class="card__article">
+            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
+
+            <div class="card__data">
+              <span class="card__description">Poon Hill, Nepal</span>
+              <h2 class="card__title">Starry Night</h2>
+              <a href="#" class="card__button">Read More</a>
+            </div>
+          </article>
+
+          <article class="card__article">
+            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
+
+            <div class="card__data">
+              <span class="card__description">Bojcin Forest, Serbia</span>
+              <h2 class="card__title">Path Of Peace</h2>
+              <a href="#" class="card__button">Read More</a>
+            </div>
+          </article>
+        </div>
+      </div>
+        
+
     <!-- Grid Wise Content -->
 
     <!-- Let us reach you 3 -->
