Added block skewed code just above the arrow icon named as our Vision

--- a/test.html
+++ b/test.html
@@ -196,9 +196,19 @@
       </div>
     </section>-->
     
+    <section class="product-cat-section block block--dark block--skewed-left">
+      <div class="product-cat-content mt-5">
+        <h1 class="text-center text-light">Our Vision</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum amet,</p>
+        </header>
+      </div>
+    </section>
+
+
+
     <!-- Down arrow-->
     <Section>
-      <div class="d-flex justify-content-center mb-5 mt-3" >
+      <div class="d-flex justify-content-center mb-5 mt-5" >
         <span class="display-2">
           <i class="fa-solid fa-angles-down fa-beat fa-xl" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
         </span>
