--- a/test.html
+++ b/test.html
@@ -175,27 +175,9 @@
       </div>
     </section>
 
-    <!--Let us reach you
-    <section class="showcase bg-secondary text-light p-5">
-      <div class="container" data-aos="zoom-in" data-aos-offset="300" data-aos-easing="ease-in-sine">
-        <div class="d-md-flex justify-content-between align-items-center">
-          <h3 class="mb-3 mb-md-0">Let us reach you !! Simply Enter your email and will connect with you in an hour</h3>
 
-          <div class="input-group contact-input input-group-lg">
-            <input 
-            type="text" 
-            class="form-control rounded-3" 
-            placeholder="Enter your Email" aria-label="Recipient's username" aria-describedby="button-addon2"
-            />
-            <button 
-            class="btn btn-outline-info btn-lg rounded-3" 
-            type="button" 
-            id="button-addon2">Send</button>
-          </div>
-        </div>
-      </div>
-    </section>-->
-    
+    <!--Our Vision-->
+
     <section class="product-cat-section block block--dark block--skewed-left">
       <div class="product-cat-content mt-5">
         <h1 class="text-center text-light">Our Vision</h1>
@@ -203,8 +185,6 @@
         </header>
       </div>
     </section>
-
-
 
     <!-- Down arrow-->
     <Section>
@@ -246,7 +226,7 @@
     <!--Image with Cards-->
     <section class="d-flex justify-content-center">
     <!--First Image card starts-->
-    <div class="card imagecard mt-5">
+    <div class=" card imagecard mt-5">
       <div class="imgbox">
         <img class="card-img"
           src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
@@ -257,7 +237,6 @@
         <h2>Keep Smiling</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-          doloribus vitae fugit enim repudiandae
         </p>
       </div>
     </div>
@@ -275,7 +254,6 @@
         <h2>Keep Smiling</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-          doloribus vitae fugit enim repudiandae
         </p>
       </div>
     </div>
@@ -293,11 +271,26 @@
         <h2>Keep Smiling</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-          doloribus vitae fugit enim repudiandae
         </p>
       </div>
     </div>
     <!--Third Image card ends-->
+
+    <!--Fourth Card testing
+    <div class="card imagecard mt-5">
+      <div class="imgbox">
+        <img class="card-img"
+          src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        />
+      </div>
+
+      <div class="image-box-content">
+        <h2>Keep Smiling</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+        </p>
+      </div>
+    </div>-->
     </section>
 
     <!--Images with card second option-->
