Added one more skwed before contact info

--- a/test.html
+++ b/test.html
@@ -535,7 +535,15 @@
       </div>
     </section> -->
 
-    
+    <!--Contact-->
+
+    <section class="product-cat-section block block--dark block--skewed-right">
+      <div class="product-cat-content mt-5">
+        <h1 class="text-center text-light">Our Vision</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum amet,</p>
+        </header>
+      </div>
+    </section>
 
     <!-- Contact & Map -->
     <section class="p-5">
