Added few changes in the code , Changed the alignment of the product cat and affed the images

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
     <nav class="navbar nav-tabs navbar-expand-xl navbar-dark py-3 fixed-top">
       <div class="container">
         <div class="anslogoclass">
-          <img src="/images/TheRentalCompany.png" class="anslogo">
+          <img src="/images/The Rental CompanyLogo With Name.png" class="anslogo">
         </div>
         <div class="companyname">
           <a href="#" class="navbar-brand">The Rental Company</a>
@@ -215,11 +215,54 @@
     </Section>
 
     <!--Product Catagory circle-->
-    <section class="product-cat-section mt-5 mb-5">
+    <section class="product-cat-section mt-5">
       <div class="product-cat-content">
         <h1>Product Catlogue</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit doloremque minima,</p>
 
+      </div>
+    </section>
+
+    <!--Images with card second option-->
+    <div class="img-card-container">
+      <div class="card__container">
+        <!--First-->
+         <article class="card__article">
+            <img src="images/CoolerRentalCompany.png" alt="image" class="card__img">
+
+            <div class="card__data">
+               <span class="card__description">Vancouver Mountains, Canada</span>
+               <h2 class="card__title">The Great Path</h2>
+               <a href="#" class="card__button">Read More</a>
+            </div>
+         </article>
+         <!--Second-->
+          <article class="card__article">
+            <img src="images/MistFanRentalCompany.png" alt="image" class="card__img">
+
+            <div class="card__data">
+              <span class="card__description">Poon Hill, Nepal</span>
+              <h2 class="card__title">Starry Night</h2>
+              <a href="#" class="card__button">Read More</a>
+            </div>
+          </article>
+          <!--Third-->
+          <article class="card__article">
+            <img src="images/NormalFanRentalCompany.png" alt="image" class="card__img">
+
+            <div class="card__data">
+              <span class="card__description">Bojcin Forest, Serbia</span>
+              <h2 class="card__title">Path Of Peace</h2>
+              <a href="#" class="card__button">Read More</a>
+            </div>
+          </article>
+        </div>
+    </div>
+
+    <!--Product Catagory circle 1-->
+    <section class="product-cat-section-one mt-5">
+      <div class="product-cat-content-one">
+        <h1>Event Catagory</h1>
       </div>
     </section>
 
@@ -229,7 +272,7 @@
       <div class=" card imagecard mt-5">
         <div class="imgbox">
           <img class="card-img"
-            src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            src="images/EventImages.jpg"
           />
         </div>
 
@@ -246,7 +289,7 @@
       <div class="card imagecard mt-5">
         <div class="imgbox">
           <img class="card-img"
-            src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            src="images/EventImages.jpg"
           />
         </div>
 
@@ -263,7 +306,7 @@
       <div class="card imagecard mt-5">
         <div class="imgbox">
           <img class="card-img"
-            src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            src="images/NorEventImages.jpg"
           />
         </div>
 
@@ -292,69 +335,6 @@
         </div>
       </div>-->
     </section>
-   
-    <!--Product Catagory circle 1-->
-    <section class="product-cat-section-one mt-5">
-      <div class="product-cat-content-one">
-        <h1>Event Catagory</h1>
-      </div>
-    </section>
-
-    <!--Images with card second option-->
-    <div class="img-card-container">
-      <div class="card__container">
-        <!--First-->
-         <article class="card__article">
-            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
-
-            <div class="card__data">
-               <span class="card__description">Vancouver Mountains, Canada</span>
-               <h2 class="card__title">The Great Path</h2>
-               <a href="#" class="card__button">Read More</a>
-            </div>
-         </article>
-         <!--Second-->
-          <article class="card__article">
-            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
-
-            <div class="card__data">
-              <span class="card__description">Poon Hill, Nepal</span>
-              <h2 class="card__title">Starry Night</h2>
-              <a href="#" class="card__button">Read More</a>
-            </div>
-          </article>
-          <!--Third-->
-          <article class="card__article">
-            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
-
-            <div class="card__data">
-              <span class="card__description">Bojcin Forest, Serbia</span>
-              <h2 class="card__title">Path Of Peace</h2>
-              <a href="#" class="card__button">Read More</a>
-            </div>
-          </article>
-          <!--Fourth-->
-          <article class="card__article">
-            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
-
-            <div class="card__data">
-              <span class="card__description">Bojcin Forest, Serbia</span>
-              <h2 class="card__title">Path Of Peace</h2>
-              <a href="#" class="card__button">Read More</a>
-            </div>
-          </article>
-          <!--Fifth-->
-          <article class="card__article">
-            <img src="https://images.pexels.com/photos/1815257/pexels-photo-1815257.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image" class="card__img">
-
-            <div class="card__data">
-              <span class="card__description">Bojcin Forest, Serbia</span>
-              <h2 class="card__title">Path Of Peace</h2>
-              <a href="#" class="card__button">Read More</a>
-            </div>
-          </article>
-        </div>
-      </div>
         
     <!-- Let us reach you 3 -->
     <section>
