Changed the company logo in the navigation bar

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
     <nav class="navbar nav-tabs navbar-expand-xl navbar-dark py-3 fixed-top">
       <div class="container">
         <div class="anslogoclass">
-          <img src="/images/The Rental CompanyLogo With Name.png" class="anslogo">
+          <img src="/images/TheRentalCompany.png" class="anslogo">
         </div>
         <div class="companyname">
           <a href="#" class="navbar-brand">The Rental Company</a>
